k8s/prd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8snode-api-service
  namespace: k8snode-prd
  labels:
    app: k8snode-api
    environment: prd
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: LoadBalancer
  selector:
    app: k8snode-api
    environment: prd
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  sessionAffinity: None
